feat(alerts): add weather alerts generation and alert endpoint